--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-popup-menu": "^0.15.6",
     "react-native-reanimated": "~1.2.0",
     "react-native-web": "^0.11.7",
+    "react-native-webview": "7.0.5",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.0"
