--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,4 @@
 {
-<<<<<<< HEAD
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -25,21 +24,9 @@
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.6.0"
-  },
-  "devDependencies": {
-    "babel-preset-expo": "^7.1.0"
-  },
-  "private": true,
-=======
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
+    "react-navigation-tabs": "^2.6.0",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "react-moment": "^0.9.6",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
@@ -49,12 +36,13 @@
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.3"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "babel-preset-expo": "^7.1.0"
   },
+  "private": true,
+  "name": "client",
+  "version": "0.1.0",
+  
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -70,6 +58,5 @@
       "last 1 safari version"
     ]
   },
->>>>>>> origin/mongodb
   "proxy": "http://localhost:5000"
 }
