--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.2.4",
+    "expo": "^35.0.1",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
     "gravatar": "^1.8.0",
