--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Rebekah Llinares",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.2.4",
     "express": "^4.17.1",
